--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,10 @@ project(AoC22)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(
-        AoC22 main.cpp aoc_types.hpp
-        day1/day1.cpp day1/day1.hpp
-        day2/day2.cpp day2/day2.hpp
-        day3/day3.cpp day3/day3.hpp
-        day4/day4.cpp day4/day4.hpp
-        day5/day5.cpp day5/day5.hpp
+        AoC22 main.cpp
+        #day1/day1.cpp day1/day1.hpp
+        #day2/day2.cpp day2/day2.hpp
+        #day3/day3.cpp day3/day3.hpp
+        #day4/day4.cpp day4/day4.hpp
+        #day5/day5.cpp day5/day5.hpp
 )
